--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -4,4 +4,5 @@
   <package id="Nancy.Viewengines.Spark" version="0.9.0" />
   <package id="Owin" version="0.11" />
   <package id="Spark" version="1.5.1" />
+  <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
