--- a/src/Adapters/Gate.Adapters.AspNetWebApi/packages.config
+++ b/src/Adapters/Gate.Adapters.AspNetWebApi/packages.config
@@ -4,6 +4,6 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20516.0" />
   <package id="Microsoft.Net.Http" version="2.0.20516.0" />
   <package id="Newtonsoft.Json" version="4.5.5" />
-  <package id="Owin" version="0.11" />
+  <package id="Owin" version="0.12-ctp4" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
