--- a/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
+++ b/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
@@ -36,9 +36,9 @@
       <Private>True</Private>
       <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.11.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+    <Reference Include="Owin, Version=0.12.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.11\lib\net40\Owin.dll</HintPath>
+      <HintPath>..\..\..\packages\Owin.0.12-ctp4\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
