--- a/src/Main/Gate.Builder/packages.config
+++ b/src/Main/Gate.Builder/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Owin" version="0.11" />
+  <package id="Owin" version="0.12-ctp4" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
