--- a/src/Tests/Gate.TestHelpers/packages.config
+++ b/src/Tests/Gate.TestHelpers/packages.config
@@ -3,6 +3,6 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" />
   <package id="Newtonsoft.Json" version="4.5.7" />
-  <package id="Owin" version="0.11" />
+  <package id="Owin" version="0.12-ctp4" />
   <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
