--- a/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.nuspec
+++ b/src/Adapters/Gate.Adapters.Nancy/Gate.Adapters.Nancy.nuspec
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="[0.11]"/>
+      <dependency id="Owin" version="[0.12-ctp4]"/>
       <dependency id="Nancy" version="0.11.0"/>
     </dependencies>
   </metadata>
