--- a/src/Main/Gate/Gate.nuspec
+++ b/src/Main/Gate/Gate.nuspec
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="[0.11]"/>
+      <dependency id="Owin" version="[0.12-ctp4]"/>
     </dependencies>
   </metadata>
   <files>
