--- a/src/Main/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Main/Gate.Middleware/Gate.Middleware.csproj
@@ -51,6 +51,7 @@
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpersExtensions.cs" />
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="HeadSuppression.cs" />
     <Compile Include="NotFound.cs" />
     <Compile Include="PassiveValidator.cs" />
     <Compile Include="RequestLogger.cs" />
