--- a/src/Tests/Gate.Middleware.Tests/packages.config
+++ b/src/Tests/Gate.Middleware.Tests/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin.Builder" version="0.4" targetFramework="net40" />
-  <package id="Owin.Startup" version="0.4" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Owin.Builder" version="0.6.3" targetFramework="net40" />
+  <package id="Owin.Extensions" version="0.6.3" targetFramework="net40" />
   <package id="TaskHelpers.Sources" version="0.1" />
   <package id="xunit" version="1.9.1" />
 </packages>
