--- a/src/Tests/Gate.Hosts.Kayak.Tests/packages.config
+++ b/src/Tests/Gate.Hosts.Kayak.Tests/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="HttpMachine" version="0.9.0.0" />
   <package id="Kayak" version="0.7.2" />
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="xunit" version="1.9.1" />
 </packages>
