--- a/src/Tests/Gate.Tests/packages.config
+++ b/src/Tests/Gate.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.5.10.11092" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="xunit" version="1.9.1" />
 </packages>
