--- a/src/Samples/Sample.Nancy/packages.config
+++ b/src/Samples/Sample.Nancy/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Owin.Host.SystemWeb" version="0.12-alpha2" targetFramework="net40" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.0-rc1-121209" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Nancy" version="0.12.1" targetFramework="net40" />
-  <package id="Nancy.Viewengines.Spark" version="0.12.1" targetFramework="net40" />
+  <package id="Nancy" version="0.14.1" targetFramework="net40" />
+  <package id="Nancy.Viewengines.Spark" version="0.14.1" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
   <package id="Owin.Extensions" version="0.6.4" targetFramework="net40" />
   <package id="Spark" version="1.7.2.0" targetFramework="net40" />
